
        News and upgrading information for Gedafe
        =========================================

(arrows indicate actions that you should make when upgrading)

------------------------------------------------------------------
HEAD    (2004-02-12)
* Made 2 column edit/add layout configurable

  The meta tables attribute "twocol" is used to control
  one vs two column layout of a table. documentation included
	(Johannes)
  MODIFIED FILES:
        doc/gedafe-sql.pod example/templates/editfield.html
        lib/perl/Gedafe/GUI.pm

------------------------------------------------------------------
HEAD    (2004-02-11)
  * Add draft documentation to the "showref" attribute in meta_tables.
	(Johannes)
------------------------------------------------------------------
HEAD    (2004-02-11)
  * Added schema support. See gedafe-user.pod. Should work with
    postgres < 7.3 also. Changes to:
    NEWS doc/gedafe-sql.pod doc/gedafe-user.pod example/demo1.cgi
    lib/perl/Gedafe/DB.pm lib/perl/Gedafe/Start.pm
    	(Johannes)
------------------------------------------------------------------
HEAD    (2004-02-09)
  * forgot a #endif in example example/templates/header.html
------------------------------------------------------------------
HEAD    (2004-02-09
  * New Button to toggle "Print format" and "screen format". Print format
    means to print all records in one browser window. This is handy to
    print out data or Reports. Also it is nice for the use of Excel Weblinks
    Changes to example/templates/header.html and lib/perl/Gedafe/GUI.pm
	(Johannes)
------------------------------------------------------------------
HEAD    (2004-02-04)
  * Change DB.pm, so that numeric fields accept separator or grouping
    characters in numbers and decimal comma instead of the decimal 
    point. This is a hack as it should be done in the widget code.
	(Johannes)

HEAD	(2004-01-20) 
------------------------------------------------------------------------------